# MetraTracker

./: CMakeLists.txt  Main.qml  README.md  conanfile.txt  main.cpp  trainfetcher.cpp  trainfetcher.h  trainmodel.cpp  trainmodel.h
